--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ embedded-hal = "0.2.7"
 
 [dev-dependencies]
 embedded-hal-mock = "0.9.0"
-linux-embedded-hal = "0.3.0"
 chrono = "0.4.31"
+
+[target.'cfg(target_os = "linux")'.dev-dependencies]
+linux-embedded-hal = "0.3.0"
+
+
 
