--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 name = "rv3028c7-rtc"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
+license = "BSD-3-Clause"
+repository = "https://github.com/tstellanova/rv3028c7-rtc/"
+description = "RV-3028-C7 and similar Real Time Clock (RTC) no_std driver"
+readme = "README.md"
 
 [dependencies]
 embedded-hal = "0.2.7"
