--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ embedded-hal = "0.2.7"
 [dev-dependencies]
 embedded-hal-mock = "0.9.0"
 chrono = "0.4.31"
+rand = "0.8.5"
+#time-series-filter = "0.1.0"
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 linux-embedded-hal = "0.3.0"
