--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ embedded-hal = "0.2.7"
 [dev-dependencies]
 embedded-hal-mock = "0.9.0"
 chrono = "0.4.31"
+shared-bus = "0.3.1"
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 linux-embedded-hal = "0.3.0"
