--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["embedded", "hardware-support", "no-std"]
 
 [dependencies]
 embedded-hal = "0.2.7"
+rtcc = "0.3.0"
 
 [dev-dependencies]
 embedded-hal-mock = "0.9.0"
