longer duration tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,10 @@ embedded-hal-mock = "0.9.0"
 shared-bus = "0.3.1"
 ds323x="0.5.1"
 chrono = {version = "0.4.31", default-features = false, features = ["alloc","clock"] }
+spin_sleep = "1.1.1"
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 linux-embedded-hal = "0.3.0"
 gpiocdev = "0.6.1"
+
 
