Support for alarms, periodic countdown timer, Vbackup switchover, and examples (#4)
* use direct cdev for alarm_int example

* revising alarm int example

* use wait_edge_event in alarm_int

* countdown timer impl

* normalize countdown API

* refining PCT support

* simplify countdown example

* refactoring for testability

* longer duration tests

* simplify clock conversion tests

* tuning countdown example

* more countdown example

* factor out raw (no mux) methods

* updated trickle charge examples

* backup switch mode DSM

---------

Co-authored-by: tstellanova <tstellanova+noreply@github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rv3028c7-rtc"
-version = "0.4.1"
+version = "0.5.0"
 edition = "2021"
 authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
 license = "BSD-3-Clause"
@@ -23,6 +23,7 @@ chrono = {version = "0.4.31", default-features = false, features = ["alloc","clo
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 linux-embedded-hal = "0.3.0"
-
+gpiocdev = "0.6.1"
+spin_sleep = "1.1.1"
 
 
